[gd_scene load_steps=4 format=3 uid="uid://40fqw8fdm1j3"]

[ext_resource type="Script" uid="uid://yj3vlkurwqir" path="res://network_manager.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://d3b8oy6ht6ne2" path="res://networkUI.gd" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://bafanrvhgunmk" path="res://player.tscn" id="2_h2yge"]

[node name="main" type="Node3D"]

[node name="NetworkManager" type="Node" parent="."]
script = ExtResource("1_ig7tw")
player_scene = ExtResource("2_h2yge")

[node name="world" type="Node3D" parent="."]

[node name="players" type="Node3D" parent="world"]

[node name="ui" type="CanvasLayer" parent="."]
script = ExtResource("2_0xm2m")

[node name="VBoxContainer" type="VBoxContainer" parent="ui"]
offset_right = 40.0
offset_bottom = 40.0

[node name="host" type="Button" parent="ui/VBoxContainer"]
layout_mode = 2
text = "host"

[node name="join" type="Button" parent="ui/VBoxContainer"]
layout_mode = 2
text = "join"

[connection signal="pressed" from="ui/VBoxContainer/host" to="ui" method="_on_host_pressed"]
[connection signal="pressed" from="ui/VBoxContainer/join" to="ui" method="_on_join_pressed"]
