[gd_scene load_steps=3 format=3 uid="uid://ctkv5ww1gkgi8"]

[ext_resource type="Script" uid="uid://d3b8oy6ht6ne2" path="res://networking/networkUI.gd" id="1_v6ljw"]
[ext_resource type="Texture2D" uid="uid://btx4yc1iei4tb" path="res://art/Screenshot_2.png" id="2_77h3e"]

[node name="menu" type="CanvasLayer"]
script = ExtResource("1_v6ljw")

[node name="mainMenuALL" type="HBoxContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="connectToJoin" type="VBoxContainer" parent="mainMenuALL"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="connectLogo" type="Label" parent="mainMenuALL/connectToJoin"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 64
text = "Connect
To
Host"
horizontal_alignment = 1
vertical_alignment = 1

[node name="entercode" type="Label" parent="mainMenuALL/connectToJoin"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Enter code:"

[node name="code" type="LineEdit" parent="mainMenuALL/connectToJoin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 32

[node name="connect" type="Button" parent="mainMenuALL/connectToJoin"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Connect to Host"

[node name="back" type="Button" parent="mainMenuALL/connectToJoin"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Cancel"

[node name="mainmenu" type="VBoxContainer" parent="mainMenuALL"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SLOPCORElogo" type="Label" parent="mainMenuALL/mainmenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 64
text = "SLOPCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="host" type="Button" parent="mainMenuALL/mainmenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Host"

[node name="join" type="Button" parent="mainMenuALL/mainmenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Join "

[node name="TextureRect" type="TextureRect" parent="mainMenuALL"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_77h3e")
expand_mode = 1
stretch_mode = 6

[node name="copyPID" type="Button" parent="."]
unique_name_in_owner = true
visible = false
text = "copy code"

[connection signal="pressed" from="mainMenuALL/connectToJoin/connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="mainMenuALL/connectToJoin/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="mainMenuALL/mainmenu/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="mainMenuALL/mainmenu/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="copyPID" to="." method="_on_copy_pid_pressed"]
